fix: make scrollbar look more native in intellij (#1837)

--- a/apps/generate-ui-v2/src/tailwind.css
+++ b/apps/generate-ui-v2/src/tailwind.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .intellij-scrollbar::-webkit-scrollbar {
+    background-color: var(--background-color);
+    width: 8px;
+  }
+
+  .intellij-scrollbar::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thumb-color);
+  }
+}
